--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "untitled2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "server": "json-server --watch db.json --port 8082",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3"
+  }
 }
